--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@aws-cdk/aws-sns-subscriptions": "1.50.0",
     "@aws-cdk/aws-sqs": "1.50.0",
     "@aws-cdk/core": "1.50.0",
+    "get-type-posts": "file:lib/lambdas/get-type-posts",
     "short-uuid": "^3.1.1"
   }
 }
